update www and service code file

--- a/service/tsconfig.json
+++ b/service/tsconfig.json
@@ -8,14 +8,17 @@
     "allowSyntheticDefaultImports": true,
     "target": "ES2021",
     "sourceMap": true,
-    "outDir": "./dist",
     "baseUrl": "./",
+    "outDir": "./dist",
     "incremental": true,
     "skipLibCheck": true,
-    "strictNullChecks": false,
     "noImplicitAny": false,
+    "strictNullChecks": false,
     "strictBindCallApply": false,
+    "noFallthroughCasesInSwitch": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
+    "paths": {
+      "@app/mysql": ["mysql"],
+    }
   }
 }
