--- a/www/package.json
+++ b/www/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "animate.css": "^4.1.1",
     "axios": "^1.7.7",
+    "crypto-js": "^4.2.0",
+    "dayjs": "^1.11.13",
     "element-plus": "^2.8.4",
     "pinia": "^2.2.4",
     "sass": "^1.79.5",
@@ -18,6 +20,7 @@
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "^22.7.5",
     "@vitejs/plugin-vue": "^5.1.4",
     "typescript": "^5.5.3",
