--- a/www/tsconfig.json
+++ b/www/tsconfig.json
@@ -5,7 +5,6 @@
     "skipLibCheck": true,
     "useDefineForClassFields": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
-
     /* Bundler mode */
     "allowImportingTsExtensions": true,
     "moduleResolution": "bundler",
@@ -13,13 +12,11 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "noEmit": true,
-
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-
     /* Alias */
     "baseUrl": "./",
     "paths": {
@@ -42,6 +39,6 @@
       "@admin/*": ["src/packages/admin/*"]
     }
   },
-  "include": ["src/**/*.{ts,vue}"],
+  "include": ["src/**/*.{ts,vue}", "src/*.d.ts"],
   "references": [{"path": "./tsconfig.node.json"}]
 }
