add components QrCode
add components QrCode
update Dynamic Form module
update utils file
update sign page

--- a/www/package.json
+++ b/www/package.json
@@ -15,6 +15,7 @@
     "dayjs": "^1.11.13",
     "element-plus": "^2.8.4",
     "pinia": "^2.2.4",
+    "qrcode": "^1.5.4",
     "sass": "^1.79.5",
     "vue": "^3.5.10",
     "vue-router": "^4.4.5"
@@ -22,6 +23,7 @@
   "devDependencies": {
     "@types/crypto-js": "^4.2.2",
     "@types/node": "^22.7.5",
+    "@types/qrcode": "^1.5.5",
     "@vitejs/plugin-vue": "^5.1.4",
     "typescript": "^5.5.3",
     "unplugin-auto-import": "^0.18.3",
