--- a/www/package.json
+++ b/www/package.json
@@ -1,37 +1,46 @@
 {
-  "name": "nest_blog",
-  "version": "0.0.1",
+  "name": "nest-blog",
   "type": "module",
   "private": false,
+  "version": "0.0.1",
   "scripts": {
     "dev": "vite",
+    "preview": "vite preview",
     "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "test:ui": "vitest --ui",
+    "test": "vitest --config ./vitest.config.ts",
+    "test:coverage": "vitest --config ./vitest.config.ts run y--coverage"
   },
   "dependencies": {
     "animate.css": "^4.1.1",
-    "axios": "^1.7.7",
-    "bootstrap-icons": "^1.11.3",
+    "axios": "^1.7.9",
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.13",
-    "element-plus": "^2.8.4",
-    "pinia": "^2.2.4",
+    "element-plus": "^2.9.2",
+    "pinia": "^2.3.0",
     "qrcode": "^1.5.4",
-    "vue": "^3.5.10",
-    "vue-i18n": "^10.0.5",
-    "vue-router": "^4.4.5"
+    "vue": "^3.5.13",
+    "vue-i18n": "^11.0.1",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.2.2",
-    "@types/node": "^22.7.5",
+    "@types/node": "^22.10.5",
     "@types/qrcode": "^1.5.5",
-    "@vitejs/plugin-vue": "^5.1.4",
-    "sass": "^1.83.0",
-    "typescript": "^5.5.3",
-    "unplugin-auto-import": "^0.18.3",
-    "unplugin-vue-components": "^0.27.4",
-    "vite": "^5.4.8",
-    "vue-tsc": "^2.1.6"
+    "@vitejs/plugin-vue": "^5.2.1",
+    "@vitest/coverage-v8": "^2.1.8",
+    "@vitest/ui": "^2.1.8",
+    "@vue/test-utils": "^2.4.6",
+    "@vue/tsconfig": "^0.7.0",
+    "bootstrap-icons": "^1.11.3",
+    "happy-dom": "^16.3.0",
+    "sass": "^1.83.1",
+    "typescript": "~5.6.2",
+    "unplugin-auto-import": "^0.19.0",
+    "unplugin-vue-components": "^0.28.0",
+    "vite": "^6.0.5",
+    "vitest": "^2.1.8",
+    "vue-tsc": "^2.2.0"
   },
   "license": "MIT",
   "repository": {
