update app Entry File and Add App CLI

--- a/service/cli/tsconfig.app.json
+++ b/service/cli/tsconfig.app.json
@@ -2,7 +2,7 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "declaration": true,
-    "outDir": "../dist/utils"
+    "outDir": "../dist/cli"
   },
   "include": ["**/*"],
   "exclude": ["node_modules", "dist", "test", "**/*spec.ts"]
