--- a/service/.env.default
+++ b/service/.env.default
@@ -10,7 +10,7 @@ JWT_SECRET="JWT_SECRET"
 COOKIE_SECRET="COOKIE_SECRET"
 
 # Files, 可以为空
-FILES_PATH="FILES_PATH"
+UPLOAD_FILE_PATH="UPLOAD_FILE_PATH"
 
 # Logger
-LOGGER_PATH="LOGGER_PATH"
+LOGGER_FILE_PATH="LOGGER_FILE_PATH"
