--- a/service/package.json
+++ b/service/package.json
@@ -31,6 +31,9 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "commander": "^13.0.0",
+    "cookie-parser": "^1.4.7",
+    "csrf-csrf": "^3.1.0",
+    "helmet": "^8.0.0",
     "ioredis": "^5.4.2",
     "mysql2": "^3.11.3",
     "nodemailer": "^6.9.16",
@@ -48,6 +51,7 @@
     "@nestjs/testing": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
     "@types/bull": "^3.15.9",
+    "@types/cookie-parser": "^1.4.8",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
